--- a/styles/globals.css
+++ b/styles/globals.css
@@ -92,3 +92,32 @@ body::-webkit-scrollbar {
   background: #fff !important;
   color: #fff !important;
 } */
+
+.swiper-button-next,
+.swiper-button-prev {
+	color: #000 !important;
+	background-color: #fff;
+	/* padding: 3px 10px 3px 10px; */
+	border-radius: 50%;
+	width: 44px !important;
+	height: 44px !important;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+	color: #000 !important;
+	background-color: #fff;
+	border-radius: 50%;
+	font-size: 16px !important;
+	font-weight: 1000;
+}
+
+.swiper-pagination-bullet-active {
+	background-color: #fff !important;
+}
+
+.swiper-pagination-bullet {
+	width: 15px !important;
+	height: 15px !important;
+	background-color: #f1f1f1 !important;
+}
