--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,28 +1,46 @@
 html,
 body {
-	padding: 0;
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
-	height: 100%;
-	width: 100%;
-	overflow-y: scroll;
-	-ms-overflow-style: none;
-	scrollbar-width: none;
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
-	display: none;
+  display: none;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #__next {
-	height: 100%;
-	width: 100%;
+  height: 100%;
+  width: 100%;
+}
+
+/* HIDE RADIO */
+[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* IMAGE STYLES */
+[type="radio"] + .radio_check {
+  cursor: pointer;
+}
+
+/* CHECKED STYLES */
+[type="radio"]:checked + .radio_check {
+  outline: 2px solid #f00;
 }
 
 /* ----------------------------------------------
@@ -32,60 +50,60 @@ body::-webkit-scrollbar {
  * w: http://animista.net, t: @cssanimista
  * ---------------------------------------------- */
 .rotate-center {
-	-webkit-animation: rotate-center 1s linear infinite both;
-	animation: rotate-center 1s linear infinite both;
+  -webkit-animation: rotate-center 1s linear infinite both;
+  animation: rotate-center 1s linear infinite both;
 }
 
 @-webkit-keyframes rotate-center {
-	0% {
-		-webkit-transform: rotate(0);
-		transform: rotate(0);
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 @keyframes rotate-center {
-	0% {
-		-webkit-transform: rotate(0);
-		transform: rotate(0);
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		transform: rotate(360deg);
-	}
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes s3 {
-	to {
-		transform: rotate(1turn);
-	}
+  to {
+    transform: rotate(1turn);
+  }
 }
 
 .slick-arrow-icon-left,
 .slick-arrow-icon-right {
-	position: absolute;
-	cursor: pointer;
-	color: #2196f3;
-	top: 50%;
-	-webkit-transform: translate(0, -50%);
-	-ms-transform: translate(0, -50%);
-	transform: translate(0, -50%);
-	padding: 0;
-	border: none;
-	outline: none;
-	transition: 0.5s ease-in-out;
-	display: block;
-	font-size: 40px;
+  position: absolute;
+  cursor: pointer;
+  color: #2196f3;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  padding: 0;
+  border: none;
+  outline: none;
+  transition: 0.5s ease-in-out;
+  display: block;
+  font-size: 40px;
 }
 
 .slick-arrow-icon-left {
-	left: -50px;
+  left: -50px;
 }
 
 .slick-arrow-icon-right {
-	right: -50px;
+  right: -50px;
 }
 
 /* .slick-arrow-icon-right:hover {
@@ -95,102 +113,102 @@ body::-webkit-scrollbar {
 
 .swiper-button-next,
 .swiper-button-prev {
-	color: #000 !important;
-	background-color: #fff;
-	/* padding: 3px 10px 3px 10px; */
-	border-radius: 50%;
-	width: 44px !important;
-	height: 44px !important;
+  color: #000 !important;
+  background-color: #fff;
+  /* padding: 3px 10px 3px 10px; */
+  border-radius: 50%;
+  width: 44px !important;
+  height: 44px !important;
 }
 
 .swiper-button-next::after,
 .swiper-button-prev::after {
-	color: #000 !important;
-	background-color: #fff;
-	border-radius: 50%;
-	font-size: 16px !important;
-	font-weight: 1000;
+  color: #000 !important;
+  background-color: #fff;
+  border-radius: 50%;
+  font-size: 16px !important;
+  font-weight: 1000;
 }
 
 .swiper-pagination-bullet-active {
-	background-color: #fff !important;
+  background-color: #fff !important;
 }
 
 .swiper-pagination-bullet {
-	width: 15px !important;
-	height: 15px !important;
-	background-color: #f1f1f1 !important;
+  width: 15px !important;
+  height: 15px !important;
+  background-color: #f1f1f1 !important;
 }
 
 /* Small Phones */
 @media only screen and (min-width: 200px) {
-	.swiper-button-next,
-	.swiper-button-prev {
-		border-radius: 50%;
-		width: 40px !important;
-		height: 40px !important;
-	}
+  .swiper-button-next,
+  .swiper-button-prev {
+    border-radius: 50%;
+    width: 40px !important;
+    height: 40px !important;
+  }
 
-	.swiper-button-next::after,
-	.swiper-button-prev::after {
-		font-size: 14px !important;
-		font-weight: 1000;
-	}
+  .swiper-button-next::after,
+  .swiper-button-prev::after {
+    font-size: 14px !important;
+    font-weight: 1000;
+  }
 
-	.swiper-pagination-bullet {
-		width: 10px !important;
-		height: 10px !important;
-	}
+  .swiper-pagination-bullet {
+    width: 10px !important;
+    height: 10px !important;
+  }
 }
 
 /* Tablet */
 @media only screen and (min-width: 768px) {
-	.swiper-button-next,
-	.swiper-button-prev {
-		border-radius: 50%;
-		width: 44px !important;
-		height: 44px !important;
-	}
+  .swiper-button-next,
+  .swiper-button-prev {
+    border-radius: 50%;
+    width: 44px !important;
+    height: 44px !important;
+  }
 
-	.swiper-button-next::after,
-	.swiper-button-prev::after {
-		font-size: 16px !important;
-		font-weight: 1000;
-	}
+  .swiper-button-next::after,
+  .swiper-button-prev::after {
+    font-size: 16px !important;
+    font-weight: 1000;
+  }
 }
 
 /* Laptop */
 @media only screen and (min-width: 1200px) {
-	.swiper-button-next,
-	.swiper-button-prev {
-		border-radius: 50%;
-		width: 50px !important;
-		height: 50px !important;
-	}
+  .swiper-button-next,
+  .swiper-button-prev {
+    border-radius: 50%;
+    width: 50px !important;
+    height: 50px !important;
+  }
 
-	.swiper-button-next::after,
-	.swiper-button-prev::after {
-		font-size: 24px !important;
-		font-weight: 1000 !important;
-	}
-	.swiper-pagination-bullet {
-		width: 15px !important;
-		height: 15px !important;
-	}
+  .swiper-button-next::after,
+  .swiper-button-prev::after {
+    font-size: 24px !important;
+    font-weight: 1000 !important;
+  }
+  .swiper-pagination-bullet {
+    width: 15px !important;
+    height: 15px !important;
+  }
 }
 
 /* Deskop */
 @media only screen and (min-width: 1600px) {
-	.swiper-button-next,
-	.swiper-button-prev {
-		border-radius: 50%;
-		width: 55px !important;
-		height: 55px !important;
-	}
+  .swiper-button-next,
+  .swiper-button-prev {
+    border-radius: 50%;
+    width: 55px !important;
+    height: 55px !important;
+  }
 
-	.swiper-button-next::after,
-	.swiper-button-prev::after {
-		font-size: 28px !important;
-		font-weight: 1000 !important;
-	}
+  .swiper-button-next::after,
+  .swiper-button-prev::after {
+    font-size: 28px !important;
+    font-weight: 1000 !important;
+  }
 }
